# NearSplitter

./: .env.example  .gitignore  CLEANUP_BEFORE_COMMIT.md  DEPLOYMENT.md  GITHUB_PAGES_FIX.md  GITHUB_PAGES_SETUP.md  LICENSE  PHASE1_SUMMARY.md  PRE_COMMIT_CHECKLIST.md  QUICKSTART.md  README.md  READY_TO_DEPLOY.md  RELEASE.md  REPOSITORY_RENAME_GUIDE.md  TESTING_GUIDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.bat  test_args.json
.claude/: settings.local.json
.github/workflows/: ci.yml  contract-tests.yml  deploy.yml
contracts/ft_mock/: Cargo.toml
contracts/ft_mock/src/: lib.rs
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/tests/: integration.rs
contracts/near_splitter/: Cargo.toml  Makefile.toml  create_circle_args.json  deploy_args.json
contracts/near_splitter/.cargo/: config.toml
contracts/near_splitter/src/: lib.rs
contracts/near_splitter/tests/: integration.rs
contracts/test_contract/: Cargo.toml
contracts/test_contract/src/: lib.rs
docs/: AUTO_DISCOVERY.md  CHANGES.md  CONTRACT_FIX.md  DEPLOYMENT_AUTO_DISCOVERY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  FEATURE_UPDATE.md  REGISTRATION_FIX.md
frontend/: .env.local.example  .env.production  .eslintrc.cjs  FRONTEND_CONTRACT_ALIGNMENT.md  escrow_args.json  next.config.js  package.json  query_args.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  page.tsx
frontend/app/diagnostic/: page.tsx
frontend/app/help/: page.tsx
frontend/components/: error-boundary.tsx
frontend/components/home/: circles-tab.tsx  claim-badge.tsx  claim-card.tsx  file-claim-modal.tsx  pending-claims-banner.tsx  storage-registration-section.tsx
frontend/components/home/claims/: index.ts
frontend/components/providers/: near-provider.tsx  root-providers.tsx  simple-near-provider.tsx  theme-provider.tsx  toast-provider.tsx
frontend/components/ui/: app-header.tsx  button.tsx  confirmation-modal.tsx  empty-state.tsx  input.tsx  logo.tsx  skeleton.tsx  theme-toggle.tsx
frontend/lib/: constants.ts  env.ts  types.ts
frontend/lib/hooks/: use-contract-call.ts  use-contract-view.ts  use-local-storage.ts  use-near-price.ts  use-near.ts  use-wallet-ready.ts
frontend/lib/near/: config.ts  contract.ts  rpc.ts  wallet.ts
frontend/lib/near/__tests__/: contract.test.ts  rpc.test.ts
frontend/lib/utils/: crypto.ts  format.ts  secure-storage.ts  shares.ts  validation.ts
frontend/lib/utils/__tests__/: format.test.ts  shares.test.ts
frontend/public/: rpc-test.html
scripts/: check-prerequisites.ps1  deploy-testnet.ps1  fix-typescript-errors.ps1  verify-near-toolchain.ps1
