[package]
name = "ft_mock"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Match exact version from near_splitter to ensure compatibility
near-sdk = { version = "=5.5.0", features = ["legacy"] }
borsh = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Pin getrandom for wasm32 compatibility
getrandom = { version = "=0.2.15", features = ["custom"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
