[package]
name = "ft_mock"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Match exact version from near_splitter to ensure compatibility
near-sdk = { version = "=5.5.0", features = ["legacy"] }
borsh = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For wasm32 builds, getrandom needs "custom" feature so NEAR SDK can provide randomness
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
