[package]
name = "near_splitter_integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Use version compatible with near-sdk 5.5.0
# Note: default-features=false avoids pulling in problematic wasm-opt/cxx dependencies
near-workspaces = { version = "0.14", default-features = false, features = ["sandbox"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"

[[test]]
name = "integration"
path = "tests/integration.rs"
