[package]
name = "near_splitter_integration_tests"
version = "0.1.0"
edition = "2021"
publish = false

# Integration tests only run on native targets, never on wasm32
# This prevents tokio/mio from being compiled for wasm32-unknown-unknown
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Use latest near-workspaces for sign-extension opcode support
# Versions 0.9+ include updated nearcore sandbox that handles modern Rust compiler output
near-workspaces = { version = "0.14", default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"

[[test]]
name = "integration"
path = "tests/integration.rs"
