[package]
name = "near_splitter"
version = "0.1.0"
edition = "2021"
authors = ["NearSplitter Contributors"]
license = "MIT"
repository = "https://github.com/johno/NearSplitter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.5.0", features = ["legacy"] }
near-contract-standards = "5.5.0"
borsh = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"



[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[target.'cfg(not(windows))'.dev-dependencies]
near-sdk = { version = "=5.5.0", default-features = false, features = ["unit-testing"] }
near-workspaces = "0.14"

[features]
dev = []

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
