[package]
name = "near_splitter"
version = "0.1.0"
edition = "2021"
authors = ["NearSplitter Contributors"]
license = "MIT"
repository = "https://github.com/johno/NearSplitter"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.5.0"
near-contract-standards = "5.5.0"
borsh = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# For wasm32 builds, getrandom needs "custom" feature so NEAR SDK can provide randomness
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

# Dev dependencies
[dev-dependencies]
serde_json = "1"
sha2 = "0.10"
# Enable unit-testing for tests - this feature provides test_utils and testing_env!
# This only affects dev builds, not the wasm32 release build
near-sdk = { version = "5.5.0", features = ["unit-testing"] }

# Dev dependencies that require native code - exclude wasm32
# These pull in tokio/mio which don't support wasm32-unknown-unknown
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }
near-workspaces = { version = "0.14", default-features = false }

[features]
default = []
dev = []

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
